# RTLSDR-MeshCore-LoRa-decoder

./: README.md  activate_meshcore.bat  build_lorarx.bat  channels.example.txt  channels.txt  environment.yml  invoke_build.cmd  meshcore.bat  pyproject.toml  requirements.txt
src/: meshcore_common.py  meshcore_crypto.py  meshcore_packet.py  meshcore_win.py
src/lorarx-src/: Select.c  X2C.h  aprspos.c  aprspos.h  aprsstr.c  aprsstr.h  dirent_win.h  loraprotocols.c  loraprotocols.h  lorarx.c  mlib.h  osi.c  osi.h  osic.c  osic.h  port_win.c  port_win.h  soundctl.c  tcp.c  udp.c
